--- a/configuration/configuration.dev.properties
+++ b/configuration/configuration.dev.properties
@@ -2,6 +2,9 @@ activemq.brokerURL=tcp://localhost:61616
 
 redis.cluster.serversPort=10.10.1.61:7000,10.10.1.61:7001,10.10.1.61:7002,10.10.1.61:7003,10.10.1.61:7004,10.10.1.61:7005
 
-jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
+#jdbc.username=root
+#jdbc.password=123456
+jdbc.url=
+jdbc.username=
+jdbc.password=
