--- a/configuration/configuration.sit.properties
+++ b/configuration/configuration.sit.properties
@@ -2,6 +2,9 @@ activemq.brokerURL=tcp://10.10.1.64:61616
 
 redis.cluster.serversPort=10.10.1.21:6380,10.10.1.21:6381,10.10.1.21:6382,10.10.1.22:6380,10.10.1.22:6381,10.10.1.22:6382
 
-jdbc.url=jdbc:mysql://10.10.1.62:3306/test?useUnicode=true&characterEncoding=utf-8
-jdbc.username=root
-jdbc.password=root
+#jdbc.url=jdbc:mysql://10.10.1.62:3306/test?useUnicode=true&characterEncoding=utf-8
+#jdbc.username=root
+#jdbc.password=root
+jdbc.url=
+jdbc.username=
+jdbc.password=
